seed data import implemented; roles & groups support

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,15 @@ configure([globalModule, coreModule, guiModule, webModule]) {
     }
 }
 
+configure([globalModule, coreModule, guiModule, webModule]) {
+    apply(plugin: 'groovy')
+
+    sourceSets {
+        main { groovy { srcDirs = ["src"] } }
+        test { groovy { srcDirs = ["test"] } }
+    }
+}
+
 configure(globalModule) {
     dependencies {
         compile("com.haulmont.cuba:cuba-global:$cubaVersion")
