--- a/modules/web/src/web-app.properties
+++ b/modules/web/src/web-app.properties
@@ -38,6 +38,6 @@ cuba.webContextName = app
 cuba.httpSessionExpirationTimeoutSec = 1800
 
 cuba.web.theme = halo
-cuba.web.foldersPaneEnabled=false
+cuba.web.foldersPaneEnabled=true
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
