test data only if cuba.testMode = true

--- a/modules/core/src/app.properties
+++ b/modules/core/src/app.properties
@@ -2,7 +2,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = oracle
+cuba.dbmsType = hsql
 
 cuba.springContextConfig = cuba-spring.xml spring.xml
 
@@ -24,3 +24,5 @@ cuba.keyForSecurityTokenEncryption = TgXYo9iV9TcQCpj9
 cuba.webContextName = app-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
+
+cuba.testMode = true
