--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ cuba {
     }
 }
 
-def oracle = files("$cuba.tomcat.dir/lib/ojdbc6.jar")
+def hsql = 'org.hsqldb:hsqldb:2.2.9'
 
 configure([globalModule, coreModule, guiModule, webModule]) {
     apply(plugin: 'java')
@@ -89,8 +89,8 @@ configure(coreModule) {
     dependencies {
         compile(globalModule)
         provided(servletApi)
-        jdbc(oracle)
-        testRuntime(oracle)
+        jdbc(hsql)
+        testRuntime(hsql)
         compile("com.haulmont.cuba:cuba-core:$cubaVersion")
         testCompile("com.haulmont.cuba:cuba-core-tests:$cubaVersion")
         testCompile("com.haulmont.cuba:cuba-shared-lib:$cubaVersion")
@@ -114,21 +114,19 @@ configure(coreModule) {
     }
 
     task createDb(dependsOn: assembleDbScripts, description: 'Creates local database', type: CubaDbCreation) {
-        oracleSystemPassword = 'oracle'
-        oracleSystemUser = 'system'
-        dbms = 'oracle'
+        dbms = 'hsql'
         host = 'localhost'
-        dbName = 'XE'
-        dbUser = 'system'
-        dbPassword = 'oracle'
+        dbName = 'cejt'
+        dbUser = 'sa'
+        dbPassword = ''
     }
 
     task updateDb(dependsOn: assembleDbScripts, description: 'Updates local database', type: CubaDbUpdate) {
-        dbms = 'oracle'
+        dbms = 'hsql'
         host = 'localhost'
-        dbName = 'XE'
-        dbUser = 'system'
-        dbPassword = 'oracle'
+        dbName = 'cejt'
+        dbUser = 'sa'
+        dbPassword = ''
     }
 }
 
